OculusDB/frontend/style.css
/*joke stuff*/
.flashbang {
    animation: ease-in-out flashbang 8s;
    width: 100vw;
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
}

.overlay
{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 1000;
}
.popup
{
    background: white;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
    text-align: center;
    margin: 0 50px;
}
.hidden
{
    display: none;
}
.buy-button
{
    background: #202324;
    color: #63fac3;
    font-size: 24px;
    padding: 15px 30px;
    border: none;
    border-radius: 5px;
    margin-top: 20px;
}
.close-button
{
    background: #202324;
    color: #333;
    font-size: 10px;
    padding: 2px 5px;
    border: none;
    border-radius: 3px;
    cursor: pointer;
    position: absolute;
    top: 5px;
    right: 5px;
}
.h3Popup
{
    color: #333;
    line-height: 1em;
    font-weight: 300;
    font-size: 2em;
    padding: 0 !important;
}
.h2Popup
{
    font-size: 4em;
    color: #ff4d54;
    line-height: 1em;
}
.strikethroughPrice {
    text-decoration: line-through;
    color: #ff4d54;
}
.dealPrice {
    color: #17700d;
}
.h2Popup span
{
    color: #333;
    font-size: 0.75em;
    text-transform: uppercase;
}
.pdeal
{
    color: #ff4d54;
    font-weight: 300;
}

.black {
    color: #000000;
}

@keyframes flashbang {
    0% {
        background-color: #00000000;
        visibility: hidden;
    }
    65% {
        background-color: #00000000;
        visibility: hidden;
    }
    65.000001% {
        background-color: #FFFFFFFF;
        visibility: visible;
    }
    75% {
        background-color: #FFFFFFFF;
        visibility: visible;
    }
    95% {
        background-color: #00000000;
        visibility: visible;
    }
    100% {
        visibility: hidden;
    }
}



/*end*/


html {
    background-image: url(/cdn/flag.svg);
    background-attachment: fixed;
    background-blend-mode: darken;
    background-size: cover;
    background-color: #111111DD;
    font-family: 'Open Sans';
    font-size: 1rem;
}

.discordInner {
    fill: var(--highlightedColor);
}

.leftBottom {
    position: fixed;
    bottom: 10px;
    right: 10px;
    background-color: var(--hightlightColorIntense);
    border-radius: 5px;
    padding: 5px;
    animation: popin 2s;
}

@keyframes popin {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

.big {
    font-size: 1.5em !important;
}

/* For icons but it's weird so I won't do em for now */
.iconColor1 {
    transition: 0.2s ease-in-out;
    stroke: var(--highlightedColor);
    stroke-width: 0.5;
    fill: var(--hightlightColorIntense)
}

.iconColor2 {
    transition: 0.2s ease-in-out;
    stroke: var(--textColor);
}

.iconColor3 {
    transition: 0.2s ease-in-out;
    fill: var(--textColor);
}

.downloadCount {
    color: var(--highlightedColor);
    margin-right: 1rem;
}

:root {
    --red: #FF5757;
    --redDark: #FF1A1A;
    --textColor: #EEEEEE;
    --bgColor: #181A1B;
    --hightlightColor: #202324;
    --hightlightColorIntense: #424546;
    --hoverColor: #2B2F31;
    --selectedColor: #35393B;
    --highlightedColor: #63FAC3;
    --brightHoverColor: #4aaf8b;
    --brightHighlightColor: #397e66;
    font-size: 18px!important;
}

.highlight {
    position: relative;
}

.highlight::after {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    content: "";
    height: 100%;
    animation: highlightKeyFrames 1s ease-in-out;
    border-radius: 5px;
}

@keyframes highlightKeyFrames {
    0% {
        background-color: #FDFF4788;
    }
    100% {
        background-color: #FDFF4700;
    }
}

b {
    color: var(--highlightedColor);
}

h1 {
    color: var(--highlightedColor);
}

h2 {
    color: var(--highlightedColor);
}

h3 {
    color: var(--highlightedColor);
}

h4 {
    color: var(--highlightedColor);
}

h5 {
    color: var(--highlightedColor);
    margin-bottom: 0px;
}

h6 {
    color: var(--highlightedColor);
    margin-bottom: 0px;
}

.textbox {
    visibility: visible;
    border-radius: 5px;
    background-color: var(--bgColor);
    padding: 2px;
    outline-width: 0;
    width: fit-content;
    margin-top: 5px;
}

body {
    position: relative;
    margin: 0;
    color: var(--textColor);
    line-height: 1.8;;
    /*
    background-color: var(--bgColor);
     */
}

.tabContainer {
    display: flex;
    flex-direction: column;
}

.tab {
    background-color: var(--hightlightColor);
}

.tab button {
    background-color: inherit;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    font-size: 1.1em;
    transition: 0.2s;
}

button {
    color: var(--textColor)
}

.contextMenu {
    position:absolute;
    background-color: var(--hightlightColor);
    border-radius: 5px;
    top: 0;
    left: 0;
    border: 1px solid var(--highlightedColor);
}

.contextMenuElement {
    background-color: var(--hightlightColor);
    color: var(--textColor);
    padding: 5px;
}

.contextMenuElement:hover {
    background-color: var(--hoverColor);
    color: var(--highlightedColor);
}
  
  /* Change background color of buttons on hover */
.tab button:hover {
    background-color: var(--hoverColor);
}
  
  /* Create an active/current tablink class */
.tab button.active {
    background-color: var(--selectedColor);
}
  
  /* Style the tab content */
.tabcontent {
    display: none;
    padding: 6px 12px;
}

.chip {
    background-color: #397e66;
    padding-left: 10px;
    padding-right: 10px;
    height: 32px;
    border-radius: 16px;
}
.chipRed {
    background-color: #ab0d0e;
    padding-left: 10px;
    padding-right: 10px;
    height: 32px;
    border-radius: 16px;
}
.tableBorderRight {
    border-right: 1px solid var(--textColor);
}

.content {
    position: relative;
    margin-top: 80px;
    padding: 10px;
}
/* ... */

